PDX mesh shader & texture configuration + improved collada animation import
Also:
- Bower update
- Minor fixes in ColladaLoader

--- a/css/index.css
+++ b/css/index.css
@@ -341,6 +341,17 @@ h5 {
 	text-shadow: none;
 }
 
+.mesh-list dl {
+	margin-bottom: 0;
+}
+.mesh-list dt {
+	text-align: left;
+	width: 80px;
+}
+.mesh-list dd {
+	margin-left: 90px;
+}
+
 
 
 /* Some mini scrollbars appear in the panel splitters */
