--- a/app/app.global.css
+++ b/app/app.global.css
@@ -19,6 +19,11 @@ html, body, #root {
   outline: 0;
 }
 
+.infinite-tree-scroll {
+  flex: 1;
+  overflow: hidden;
+}
+
 .infinite-tree-toggler {
   width: 18px;
   display: inline-block;
@@ -40,14 +45,17 @@ html, body, #root {
 }
 
 .infinite-tree-type-more {
+  font-size: 120%;
 }
 
 .infinite-tree-item {
-  height: 24px;
+  height: 22px;
+  font-size: 80%;
   line-height: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
   border-radius: 4px;
+  overflow: hidden;
 }
 
 .infinite-tree-item:hover {
@@ -55,9 +63,18 @@ html, body, #root {
   cursor: pointer;
 }
 
+.infinite-tree-title {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .infinite-tree-node {
   height: 22px;
   vertical-align: middle;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 
