--- a/app/app.global.css
+++ b/app/app.global.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   font-size: 130%;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  color: black;
 }
 
 html, body, #root {
@@ -73,6 +74,10 @@ html, body, #root {
 .infinite-tree-item:hover {
   background-color: #eee;
   cursor: pointer;
+}
+
+.infinite-tree-selected {
+  background-color: #d2eafb !important;
 }
 
 .infinite-tree-title {
