- Added grid viewer for type data

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -145,3 +145,9 @@ html, body, #root {
   flex-grow: 1;
   line-height: 22px;
 }
+
+/* react-redux-grid */
+.react-grid-container {
+  display: flex;
+  flex-direction: column;
+}
