--- a/app/app.global.css
+++ b/app/app.global.css
@@ -154,12 +154,23 @@ html, body, #root {
 }
 
 a {
-  color: #c6a700;
+  /*color: #c6a700;*/
+  color: inherit;
 }
 
 .react-grid-page-buttons {
   background-color: #fdd835 !important;
   color: black !important;
+  /*box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);*/
+  /* margin: 5px !important; */
+}
+.react-grid-pager-toolbar {
+  /* height: 35px !important; */
+}
+
+.react-grid-page-buttons:disabled {
+  background-color: inherit !important;
+  color: grey !important;
 }
 
 .react-grid-table.structure-type-list .react-grid-cell span {
@@ -172,4 +183,29 @@ a {
 
 .react-grid-cell a:hover {
   text-decoration: none;
+}
+
+.react-grid-cell {
+  font-family: inherit !important;
+  line-height: inherit !important;;
+  font-size: inherit !important;
+  height: 30px !important;
+  vertical-align: middle;
+}
+
+.react-grid-row {
+  transition-duration: inherit !important;
+}
+
+.react-grid-cell-handle-container {
+  display: inline !important;
+  height: inherit !important;
+  margin-left: 0 !important;
+  padding-left: 0 !important;
+}
+
+.react-grid-cell-tree-arrow::before {
+  left: 0 !important;
+  top: 0 !important;
+  font-size: 10px !important;
 }
