- Update to electron 2.0 - Enabled some (rough) Content-Security-Policy settings

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -1,6 +1,12 @@
 /*@import '~antd/dist/antd.css';*/
 @import url('../node_modules/font-awesome/css/font-awesome.min.css');
 
+/*@import '~material-design-icons-iconfont';*/
+
+@import '~material-design-icons-iconfont/dist/material-design-icons.scss';
+
+
+
 /* General styling */
 
 body {
