- More replace redux with mobx

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -304,6 +304,10 @@ a {
   align-items: center;
 }
 
+.ReactVirtualized__Table__row:focus {
+  outline: none;
+}
+
 .ReactVirtualized__Table__headerTruncatedText {
   display: inline-block;
   max-width: 100%;
